--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             </article>
             <article class="profile profile2">
                 <h3 class="signature">
-                    <img src="이미지.png" alt="조해용 서명">
-                    <span class="readOnly">조해용</span>
+                    조해용
                 </h3>
                 <p>안녕하세요!</p>
                 <p>열정 가득한</p>
@@ -110,45 +109,47 @@
                 <h3>html&css</h3>
                 <div class="chart chart1-1">
                     <h4 class="chartName">반응형 웹 제작</h4>
+                    <img src="images/HTML5.svg" alt="html5">
+                    <img src="images/css3.svg" alt="css3">
                     <div class="chartBack">
                         <div class="chartBar" data-score="100%"></div>
                     </div>
                 </div>
                 <div class="chart chart1-2">
                     <h4 class="chartName">애니메이트 구현</h4>
+                    <img src="images/HTML5.svg" alt="html5">
+                    <img src="images/css3.svg" alt="css3">
                     <div class="chartBack">
                         <div class="chartBar" data-score="80%"></div>
                     </div>
                 </div>
                 <div class="chart chart1-3">
                     <h4 class="chartName">VSCode emmet</h4>
+                    <img src="images/vscode.svg" alt="vsCode">
                     <div class="chartBack">
                         <div class="chartBar" data-score="90%"></div>
                     </div>
                 </div>
-                <!-- <div class="chart chart1-4">
-                    <h4 class="chartName">SCSS</h4>
-                    <div class="chartBack">
-                        <div class="chartBar" data-score="80%"></div>
-                    </div>
-                </div> -->
             </article>
             <article class="skill lang">
                 <h3>Javascript & library</h3>
                 <div class="chart chart2-1">
                     <h4 class="chartName">Javascript</h4>
+                    <img src="images/javascript.svg" alt="js">
                     <div class="chartBack">
                         <div class="chartBar" data-score="100%"></div>
                     </div>
                 </div>
                 <div class="chart chart2-2">
                     <h4 class="chartName">JQuery</h4>
+                    <img src="images/jquery.svg" alt="jquery">
                     <div class="chartBack">
                         <div class="chartBar" data-score="100%"></div>
                     </div>
                 </div>
                 <div class="chart chart2-3">
                     <h4 class="chartName">React(컴포넌트)</h4>
+                    <img src="images/React.svg" alt="react">
                     <div class="chartBack">
                         <div class="chartBar" data-score="80%"></div>
                     </div>
@@ -158,26 +159,32 @@
                 <h3>Design Tools</h3>
                 <div class="chart chart3-1">
                     <h4 class="chartName">포토샵 - 이미지편집</h4>
+                    <img src="images/photoshop.svg" alt="photoshop">
                     <div class="chartBack">
                         <div class="chartBar" data-score="80%"></div>
                     </div>
                 </div>
                 <div class="chart chart3-2">
                     <h4 class="chartName">드로잉</h4>
+                    <img src="images/photoshop.svg" alt="photoshop">
+                    <img src="images/Illustrator.svg" alt="Illustrator">
                     <div class="chartBack">
                         <div class="chartBar" data-score="60%"></div>
                     </div>
                 </div>
                 <div class="chart chart3-3">
-                    <h4 class="chartName">배너 & 포스터 제작</h4>
+                    <h4 class="chartName">XD & Figma - UI/UX작성</h4>
+                    <img src="images/XD.svg" alt="XD">
+                    <img src="images/figma.svg" alt="Figma">
                     <div class="chartBack">
-                        <div class="chartBar" data-score="60%"></div>
+                        <div class="chartBar" data-score="80%"></div>
                     </div>
                 </div>
                 <div class="chart chart3-4">
-                    <h4 class="chartName">XD & Figma - UI/UX작성</h4>
+                    <h4 class="chartName">Premiere Pro - 영상 편집</h4>
+                    <img src="images/Premiere.svg" alt="Premiere Pro">
                     <div class="chartBack">
-                        <div class="chartBar" data-score="80%"></div>
+                        <div class="chartBar" data-score="60%"></div>
                     </div>
                 </div>
             </article>
@@ -185,18 +192,21 @@
                 <h3>사무업무</h3>
                 <div class="chart chart4-1">
                     <h4 class="chartName">Excel</h4>
+                    <img src="images/Excel.svg" alt="Excel">
                     <div class="chartBack">
                         <div class="chartBar" data-score="80%"></div>
                     </div>
                 </div>
                 <div class="chart chart4-2">
                     <h4 class="chartName">문서작성</h4>
+                    <img src="images/Word.svg" alt="ms word">
                     <div class="chartBack">
                         <div class="chartBar" data-score="90%"></div>
                     </div>
                 </div>
                 <div class="chart chart4-3">
                     <h4 class="chartName">powerpoint 작성</h4>
+                    <img src="images/PowerPoint.svg" alt="powerpoint">
                     <div class="chartBack">
                         <div class="chartBar" data-score="70%"></div>
                     </div>
