--- a/movieclip.html
+++ b/movieclip.html
@@ -45,7 +45,7 @@
         <ul class="twoCol">
             <li>
                 <h3>영화 소개 플랫폼 MovieClip</h3>
-                <p>라이브러리 : MovieClip은 gsap을 사용한 프로젝트입니다.</p>
+                <p>라이브러리 : MovieClip은 라이브러리를 사용하지 않은 프로젝트입니다.</p>
                 <p>구분 : 1인 프로젝트</p>
                 <p>기여도 : 100%</p>
             </li>
@@ -105,7 +105,6 @@
             <h3>최적화</h3>
             <ul>
                 <li>· 페이지 최적화를 위해 css와 js파일들을 압축 상태로 업로드 하였습니다.</li>
-                <li>· 페이지 로딩 속도를 올리기 위해 cdn으로 압축된 파일을 불러와 사용했습니다.</li>
                 <li>· 검색 최적화를 위해 lighthouse를 활용했고, SEO 100점을 달성했습니다.</li>
             </ul>
         </div>
@@ -149,7 +148,8 @@
             </dd>
             <dt>2. 패럴렉스 구현에 대한 고민</dt>
             <dd>라이브러리를 사용하면 js에 비해 로딩 속도가 느려지기에 gsap을 이용해 구현할지, 라이브러리 없이 구현할지에 대해 고민했다.</dd>
-            <dd>라이브러리 없이 구현한 적응형 버전과, gsap을 이용해 구현한 반응형 버전 두 가지로 구현했다.</dd>
+            <dd>포트폴리오에서 gsap을 사용하기로 결정했기에 별도의 라이브러리 없이 구현하기로 결정했다.</dd>
+            <dd>구현 결과 gsap을 사용하는쪽이 유지보수가 훨씬 쉽다는 결론에 도달했다.</dd>
         </dl>
     </section>
     <!-- section#problem end -->
